Resolved #45: apply more level to align with the UI design

--- a/wc/theme/light.css
+++ b/wc/theme/light.css
@@ -44,10 +44,14 @@
   font-size: var(--font-size-normal);
 
   /* Font Weight */
-  --font-weight-normal: 400;
-  --font-weight-bold: 500;
+  --font-weight-thin: 100;
+  --font-weight-light: 300;
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+  --font-weight-black: 900;
   
-  font-weight: var(--font-weight-normal);
+  font-weight: var(--font-weight-regular);
 
   /* Line Height */
   --line-height-normal-ratio: 1.5;
